rspec-tools/tests/resources/invalid-rules/S200/javascript/rule.adoc
== Why is this an issue?
// duplicate "How to fix it in Razor" sections
== How to fix it in Razor
== How to fix it in Razor



